# opencost-mcp-server

./: .env.example  Makefile  README.md  pyproject.toml
AGent/: .gitignore
AGent/.github/scripts/: check_no_env_files.sh
AGent/.github/workflows/: agent-ci.yml
AGent/hi/: PRODUCTION_REVIEW_AND_CORE_PY_EXPLANATIONS.md
AGent/hi/parallel_task_decomposition_execution/: README.md
AGent/hi/parallel_task_decomposition_execution/parallel_task_decomposition_agent/: config.py  tools.py
AGent/hi/sovereign-job-hunter/: .env.example  Makefile  README.md  architecture.md  pyproject.toml  requirements.txt  run_sjh.py
AGent/hi/sovereign-job-hunter/demo/: jd.txt  run_demo.py
AGent/hi/sovereign-job-hunter/execution-agent/: README.md  agent.py  render_pdfs.py
AGent/hi/sovereign-job-hunter/scout-agent/: README.md  agent.py
AGent/hi/sovereign-job-hunter/shared/: __init__.py  gemini_client.py  observability.py  prompts.py  qdrant_store.py  schemas.py
AGent/hi/sovereign-job-hunter/tests/: conftest.py  test_execution_agent.py  test_quality_gate.py  test_scout_agent.py  test_verifier_agent.py
AGent/hi/sovereign-job-hunter/vault-agent/: README.md  agent.py
AGent/hi/sovereign-job-hunter/verifier-agent/: README.md  agent.py
src/opencost_mcp/: __init__.py  client.py  schemas.py  server.py
src/opencost_mcp/tools/: __init__.py  allocation.py  analytics.py  forecast.py
tests/: conftest.py  test_allocation.py  test_client.py
